--- a/ChatbotAPI/appsettings.json
+++ b/ChatbotAPI/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=tcp:otopilot-sql-server.database.windows.net,1433;Initial Catalog=otopilot;Persist Security Info=False;User ID=otopilotadmin;Password=Welcome123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
