--- a/react-client/.env.production
+++ b/react-client/.env.production
@@ -1,1 +1,1 @@
-﻿VITE_API_URL=otopilotbackend-c8drg8ech7gtgmb6.eastus2-01.azurewebsites.net
+﻿VITE_API_URL=otopilotbackend-c8drg8ech7gtgmb6.eastus2-01.azurewebsites.net/api
